[package]
name = "solend-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Morgan Metz <morgan.metz@eyekon.xyz>"]

[features]
all = ["borsh"]
borsh = []

[dependencies]
solana-sdk = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
solana-client = "2.2.7"